# Foresight

./: .env.example  .gitignore  Makefile  README.md  build-plan.md  docker-compose.yml  system-prompt.md
.claude/: settings.local.json.tmp.79808.901b1d1bf000
.github/workflows/: ci.yml  deploy-pages.yml
agent/: .env.example  README.md  pyproject.toml
agent/foresight_agent/: __init__.py  alert.py  faithfulness.py  gen_demo_bundle.py  graph.py  knowledge.py  llm.py  retrieval.py  run.py  state.py
agent/tests/: test_faithfulness.py  test_graph.py  test_retrieval.py
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json
frontend/__tests__/: anomaly.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnomalyCard.tsx  AnomalyDetail.tsx  AnomalyList.tsx  Dashboard.tsx  MetricChart.tsx  Sidebar.tsx  StatTiles.tsx  StatusBadge.tsx
frontend/lib/: format.ts  types.ts
frontend/public/: demo-data.json
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/adls/: main.tf
infra/terraform/modules/aks/: main.tf
infra/terraform/modules/databricks/: main.tf
infra/terraform/modules/event_hubs/: main.tf
infra/terraform/modules/openai/: main.tf
ml/anomaly/: README.md  pyproject.toml
ml/anomaly/foresight_anomaly/: __init__.py  describe.py  gold_adapter.py  pipeline.py  records.py  run.py
ml/anomaly/tests/: test_gold_adapter.py  test_pipeline.py
ml/classification/: README.md  pyproject.toml
ml/classification/foresight_classification/: __init__.py  baseline.py  benchmark.py  classifier.py  data.py  train.py  train_lora.py
ml/classification/tests/: test_baseline.py  test_data.py  test_t5_pipeline.py
ml/detection/: README.md  pyproject.toml
ml/detection/foresight_detection/: __init__.py  benchmark.py  data.py  ensemble.py  lstm_autoencoder.py  nab.py  nab_benchmark.py  shap_explain.py  train.py
ml/detection/tests/: test_benchmark.py  test_data.py  test_ensemble.py  test_nab.py
monitoring/: README.md
monitoring/grafana/dashboards/: foresight.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
pipelines/: README.md
pipelines/dbt/foresight/: dbt_project.yml  profiles.yml
pipelines/dbt/foresight/macros/: epoch_to_ts.sql  generate_schema_name.sql  json_get.sql
pipelines/dbt/foresight/models/marts/: _marts__models.yml  fct_kpi_timeseries.sql
pipelines/dbt/foresight/models/staging/: _staging__models.yml  _staging__sources.yml  stg_stripe_events.sql
pipelines/dbt/foresight/seeds/: _generate_bronze_seed.py  bronze_stripe_events.csv
pipelines/dbt/foresight/tests/: assert_alpha_known_kpis.sql  assert_kpi_grain_unique.sql  assert_rates_in_range.sql
pipelines/orchestration/: requirements.txt
pipelines/orchestration/dags/: foresight_pipeline.py
pipelines/orchestration/tests/: conftest.py  test_dag_integrity.py
pipelines/quality/: pyproject.toml
pipelines/quality/foresight_quality/: __init__.py  expectations.py  run_quality.py
pipelines/quality/tests/: test_expectations.py
pipelines/streaming/: pyproject.toml
pipelines/streaming/foresight_streaming/: __init__.py  bronze_ingest.py  config.py  transform.py
pipelines/streaming/tests/: test_bronze_transform.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/app/: __init__.py  cache.py  config.py  db.py  main.py  metrics.py  models.py  repository.py  schema.sql  seed.py
services/api/tests/: conftest.py  test_api.py  test_observability.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: __init__.py  config.py  kafka_producer.py  logging.py  main.py  metrics.py
services/ingestion/app/webhooks/: stripe.py
services/ingestion/tests/: conftest.py  test_metrics.py  test_stripe_webhook.py
services/kpi_stream/: Dockerfile  README.md  pyproject.toml
services/kpi_stream/foresight_kpi/: __init__.py  __main__.py  config.py  consumer.py  kpi.py
services/kpi_stream/tests/: test_kpi.py
services/worker/: README.md  pyproject.toml
services/worker/foresight_worker/: __init__.py  features.py  run.py
services/worker/tests/: test_features.py
