[project]
name = "foresight-classification"
version = "0.1.0"
description = "Foresight anomaly-type classification — LoRA-fine-tuned T5-small"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "numpy>=1.26,<2.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
t5 = [
    "torch>=2.2",
    "transformers>=4.40,<4.45",
    "peft>=0.11",
    "sentencepiece>=0.2",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["foresight_classification"]
