[project]
name = "foresight-detection"
version = "0.1.0"
description = "Foresight anomaly detection — LSTM autoencoder + IsolationForest ensemble"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26,<2.0",
    "pandas>=2.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
train = [
    "optuna>=3.6",
    "wandb>=0.17",
    "shap>=0.45",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["foresight_detection"]
