[project]
name = "foresight-worker"
version = "0.1.0"
description = "Foresight detection worker — KPI store → detection + agent → anomaly_log"
requires-python = ">=3.11"
# The pipeline packages (foresight-detection / -classification / -anomaly /
# -agent) are installed editable from the repo; see the worker README.
dependencies = [
    "psycopg[binary]>=3.2",
    "pandas>=2.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["foresight_worker"]
